# asic-rs

./: .gitattributes  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
asic-rs-core/: Cargo.toml
asic-rs-core/src/: errors.rs  util.rs
asic-rs-core/src/config/: fan.rs  mod.rs  pools.rs  scaling.rs  tuning.rs
asic-rs-core/src/data/: board.rs  device.rs  fan.rs  hashrate.rs  message.rs  miner.rs  pool.rs
asic-rs-core/src/test/: util.rs
asic-rs-core/src/traits/: auth.rs  entry.rs  miner.rs  mod.rs  model.rs
asic-rs-firmwares/antminer/: Cargo.toml
asic-rs-firmwares/antminer/src/: firmware.rs
asic-rs-firmwares/antminer/src/backends/v2020/: mod.rs  rpc.rs  web.rs
asic-rs-firmwares/antminer/src/test/json/v2020/: devs.json  pools.json  stats.json  summary.json  system_info.json  version.json
asic-rs-firmwares/auradine/src/test/json/v1/: asccount.json  devs.json  fan.json  frequency.json  ipreport.json  led.json  mode.json  pools.json  psu.json  summary.json  temperature.json  version.json  voltage.json
asic-rs-firmwares/avalonminer/: Cargo.toml
asic-rs-firmwares/avalonminer/src/: firmware.rs
asic-rs-firmwares/avalonminer/src/backends/: mod.rs  rpc.rs
asic-rs-firmwares/avalonminer/src/backends/avalon_a/: mod.rs
asic-rs-firmwares/avalonminer/src/backends/avalon_q/: mod.rs  rpc.rs
asic-rs-firmwares/avalonminer/src/test/json/: ascset_help.json  ascset_softoff.json  ascset_softon.json  ascset_workmode.json  check.json  coin.json  config.json  devdetails.json  devs.json  litestats.json  pools.json  stats.json  stats_parsed.json  summary.json  version.json
asic-rs-firmwares/bitaxe/: Cargo.toml
asic-rs-firmwares/bitaxe/src/: firmware.rs
asic-rs-firmwares/bitaxe/src/backends/: mod.rs
asic-rs-firmwares/bitaxe/src/backends/v2_0_0/: mod.rs
asic-rs-firmwares/bitaxe/src/backends/v2_9_0/: mod.rs
asic-rs-firmwares/bitaxe/src/test/json/v2_0_0/: system_info.json
asic-rs-firmwares/braiins/: Cargo.toml
asic-rs-firmwares/braiins/src/: firmware.rs
asic-rs-firmwares/braiins/src/backends/: mod.rs
asic-rs-firmwares/braiins/src/backends/v21_09/: graphql.rs  mod.rs  rpc.rs  web.rs
asic-rs-firmwares/braiins/src/backends/v25_03/: mod.rs
asic-rs-firmwares/braiins/src/backends/v25_05/: mod.rs
asic-rs-firmwares/braiins/src/backends/v25_07/: mod.rs  web.rs
asic-rs-firmwares/braiins/src/backends/v26_04/: mod.rs
asic-rs-firmwares/braiins/src/test/json/: mod.rs
asic-rs-firmwares/braiins/src/test/json/v21_09/: web_net_conf.json
asic-rs-firmwares/braiins/src/test/json/v24_09/: gql_boards.json  gql_events.json  gql_pools.json  gql_system.json  mod.rs  version.json  web_net_conf.json
asic-rs-firmwares/braiins/src/test/json/v25_03/: gql_boards.json  gql_pools.json  gql_system.json  web_net_conf.json
asic-rs-firmwares/braiins/src/test/json/v25_05/: gql_boards.json  gql_pools.json  gql_system.json  mod.rs  version.json  (+1 more)
asic-rs-firmwares/epic/: Cargo.toml
asic-rs-firmwares/epic/src/: firmware.rs
asic-rs-firmwares/epic/src/backends/v1/: mod.rs  web.rs
asic-rs-firmwares/luxminer/: Cargo.toml
asic-rs-firmwares/luxminer/src/: firmware.rs
asic-rs-firmwares/luxminer/src/backends/v1/: mod.rs  rpc.rs
asic-rs-firmwares/marathon/: Cargo.toml
asic-rs-firmwares/marathon/src/: firmware.rs
asic-rs-firmwares/marathon/src/backends/v1/: mod.rs  web.rs
asic-rs-firmwares/nerdaxe/: Cargo.toml
asic-rs-firmwares/nerdaxe/src/: firmware.rs
asic-rs-firmwares/nerdaxe/src/backends/v1/: mod.rs
asic-rs-firmwares/vnish/: Cargo.toml
asic-rs-firmwares/vnish/src/: firmware.rs
asic-rs-firmwares/vnish/src/backends/v1_2_0/: mod.rs  web.rs
asic-rs-firmwares/whatsminer/: Cargo.toml
asic-rs-firmwares/whatsminer/src/: error_codes.rs  firmware.rs  lib.rs
asic-rs-firmwares/whatsminer/src/backends/: mod.rs
asic-rs-firmwares/whatsminer/src/backends/v1/: mod.rs  rpc.rs
asic-rs-firmwares/whatsminer/src/backends/v2/: mod.rs  rpc.rs
asic-rs-firmwares/whatsminer/src/backends/v3/: mod.rs  rpc.rs
asic-rs-firmwares/whatsminer/src/test/json/v1/: devs.json  get_psu.json  get_version.json  mod.rs  pools.json  status.json  summary.json  summary_with_errors.json
asic-rs-firmwares/whatsminer/src/test/json/v2/: devs.json  get_error_code.json  get_error_code_with_errors.json  get_miner_info.json  get_psu.json  get_version.json  mod.rs  pools.json  status.json  summary.json
asic-rs-firmwares/whatsminer/src/test/json/v3/: get_device_info.json  get_device_info_with_errors.json  get_miner_status_edevs.json  get_miner_status_pools.json  get_miner_status_summary.json  mod.rs
asic-rs-makes/antminer/: Cargo.toml
asic-rs-makes/antminer/src/: hardware.rs  models.rs
asic-rs-makes/avalon/: Cargo.toml
asic-rs-makes/avalon/src/: hardware.rs  models.rs
asic-rs-makes/bitaxe/: Cargo.toml
asic-rs-makes/bitaxe/src/: hardware.rs  models.rs
asic-rs-makes/braiins/: Cargo.toml
asic-rs-makes/braiins/src/: hardware.rs  models.rs
asic-rs-makes/epic/: Cargo.toml
asic-rs-makes/epic/src/: hardware.rs  models.rs
asic-rs-makes/marathon/: Cargo.toml
asic-rs-makes/nerdaxe/: Cargo.toml
asic-rs-makes/nerdaxe/src/: hardware.rs  models.rs
asic-rs-makes/whatsminer/: Cargo.toml
asic-rs-makes/whatsminer/src/: hardware.rs  models.rs
asic-rs-pydantic/: Cargo.toml
asic-rs-pydantic-macros/: Cargo.toml
asic-rs-pydantic-macros/src/: lib.rs
asic-rs-pydantic-macros/tests/ui/fail/: duplicate_serializer.rs  duplicate_serializer.stderr  missing_schema.rs  missing_schema.stderr
asic-rs-pydantic-macros/tests/ui/pass/: pydantic_model.rs
asic-rs-pydantic/src/: lib.rs
docs/development/: miner-support-review-guidelines.md
meta/braiins/25.07/: openapi.json
meta/braiins/26.04/: openapi.json
meta/epic/1.22.5/: powerplay.json
meta/epic/1.30.0/: powerplay.json
meta/vnish/v1.2.6/: api-doc.json
python/pyasic_rs/: __init__.py  asic_rs.pyi  config.py  data.py  factory.py  miner.py
python/tests/: test_pydantic_interop.py
src/: factory.rs  lib.rs  listener.rs
src/python/: factory.rs  miner.rs  mod.rs  typing.rs
(+34 files in other folders)
