[package]
name = "asic-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for asic-rs, asic-rs-firmware, and asic-rs-makes."

[lints]
workspace = true

[dependencies]
measurements.workspace = true
macaddr.workspace = true
serde.workspace = true
url.workspace = true
strum.workspace = true
semver.workspace = true
async-trait.workspace = true
anyhow.workspace  = true
reqwest.workspace  = true
serde_json.workspace  = true
tracing.workspace  = true
tokio.workspace = true
futures.workspace = true
secrecy.workspace = true

asic-rs-pydantic = { workspace = true, optional = true }
pyo3 = {workspace = true, optional = true}

[features]
python = ["dep:asic-rs-pydantic", "dep:pyo3"]
