[package]
name = "asic-rs-firmwares-avalonminer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Avalonminer firmware implementation for asic-rs"

[lints]
workspace = true

[dependencies]
asic-rs-core.workspace = true
asic-rs-makes-avalon.workspace = true

async-trait.workspace = true
serde_json.workspace = true
semver.workspace = true
anyhow.workspace = true
macaddr.workspace = true
measurements.workspace = true
tokio.workspace = true
regex.workspace = true

pyo3 = {workspace = true, optional = true}

[features]
python = ["dep:pyo3", "asic-rs-core/python"]
