[package]
name = "asic-rs-firmwares-bitaxe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bitaxe/ESPMiner firmware implementation for asic-rs"

[lints]
workspace = true

[dependencies]
asic-rs-core.workspace = true
asic-rs-makes-bitaxe.workspace = true

async-trait.workspace = true
reqwest.workspace = true
serde_json.workspace = true
semver.workspace = true
anyhow.workspace = true
macaddr.workspace = true
measurements.workspace = true
tokio.workspace = true

pyo3 = {workspace = true, optional = true}

[features]
python = ["dep:pyo3", "asic-rs-core/python"]
