[package]
name = "asic-rs-makes-braiins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Braiins hardware information for asic-rs"

[lints]
workspace = true

[dependencies]
asic-rs-core.workspace = true

serde.workspace = true
strum.workspace = true
serde_json.workspace = true

pyo3 = {workspace = true, optional = true}

[features]
python = ["dep:pyo3", "asic-rs-core/python"]
